[package]
name = "youtube-scr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = { version = "0.11.12" , features = ["json"] }
chrono = "0.4.31"
select = "0.6.0"
dotenv = "0.15"
google-youtube3 = "5.0.3+20230123"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
